# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
-import healthRouter from "./health";
-import seoRouter from "./seo";
+import healthRouter   from "./health";
+import seoRouter      from "./seo";
+import settingsRouter from "./settings";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(settingsRouter);
 router.use(seoRouter);
 
 export default router;
